added all the remaining changes

--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -1,16 +1,30 @@
 <section class="home">
-    <div class="container">
-      <div class="about-me">
-        <h2>About Me</h2>
-        <h3>I am Madhukar Gurram.</h3>
-        <p>A Full Stack Engineer with 5+ years of experience in working with some of the most successful companies and the brightest minds of the 21st century. </p>
-        <p>Currently, I work as Technical Lead - Delivery at Qentelli Solutions Private Ltd.</p>
-        <p>My experience ranges from simple development to complex software solutions. I've worked towards building dynamic websites, integrated commerce platforms and intricate CRM systems on <span> Nodejs/Angular/MongoDB/Mysql/HTML/Ajax/CSS/Pug/ReactJs/NextJs. </span></p>
-        <p>An IIIT Alumni, I led my inter-college team in quite a few hackathons. I've also worked with the Design and Verification of AES algorithm of data encryption.</p>
-      </div>
-      <div class="profile">
-        <img src="assets/images/Profile.jpeg" alt="Your Photo">
+  <div class="container">
+    <div class="about-me">
+      <h2>About Me</h2>
+      <h3>I am Madhukar Gurram.</h3>
+      <p>A Full Stack Engineer with 5+ years of experience in working with some of the most successful companies and the
+        brightest minds of the 21st century. </p>
+      <p>Currently, I work as Technical Lead - Delivery at Qentelli Solutions Private Ltd.</p>
+      <p>My experience ranges from simple development to complex software solutions. I've worked towards building
+        dynamic websites, integrated commerce platforms and intricate CRM systems on <span>
+          Nodejs/Angular/MongoDB/Mysql/HTML/Ajax/CSS/Pug/ReactJs/NextJs. </span></p>
+      <p>An IIIT Alumni, I led my inter-college team in quite a few hackathons. I've also worked with the Design and
+        Verification of AES algorithm of data encryption.</p>
+    </div>
+    <div class="profile">
+      <img src="assets/images/P2.jpg" alt="My Profile">
+      <!-- <img src="assets/images/Profile.jpeg" alt="My Profile"> -->
+      <div class="details">
+        <!-- <h2>Madhukar Gurram</h2>
+        <p>Software Developer</p> -->
+        <div class="icons">
+          <a href="https://www.linkedin.com/in/madhukar-gurram-32002113b" target="_blank"><i
+              class="fab fa-linkedin fa-2x linkedIn"></i></a>
+          <a href="https://github.com/madhu4223" target="_blank"><i class="fab fa-github fa-2x github"></i></a>
+          <a href="https://www.npmjs.com/package/customized-random-string-generator" target="_blank"><i class="fab fa-npm fa-2x npm"></i></a>
+        </div>
       </div>
     </div>
-  </section>
-  
+  </div>
+</section>
