--- a/src/components/header/header.component.css
+++ b/src/components/header/header.component.css
@@ -2,7 +2,7 @@ header {
   position: sticky;
   background-color: #333;
   color: #fff;
-  padding: 20px;
+  padding: 15px;
   z-index: 1000;
 }
 
@@ -13,8 +13,12 @@ header {
 }
 
 .logo {
-  font-size: 24px;
+  /* font-size: 24px; */
   font-weight: bold;
+  margin-left: 25px;
+}
+.logo img{
+  height: 3em;
 }
 
 nav ul {
@@ -66,7 +70,7 @@ nav ul li a:hover {
   border: 2px solid #00bcd4;
   /* Button border */
   padding: 10px 20px;
-  border-radius: 5px;
+  border-radius: 2px;
   text-decoration: none;
   margin-left: 20px;
   /* Adjust spacing between resume button and navigation items */
