--- a/src/components/header/header.component.html
+++ b/src/components/header/header.component.html
@@ -1,19 +1,18 @@
 <header>
   <div class="container">
     <div class="logo">
-      <a routerLink="/">Your Logo</a>
+      <a routerLink="/"><img src="assets/images/MG_icon.png"/></a>
     </div>
     <nav class="nav-section">
       <ul>
-        <li routerLinkActive="active"><a routerLink="/">Home</a></li>
-        <li><a routerLink="/projects">Projects</a></li>
-        <li><a routerLink="/skills">Skills</a></li>
+        <li [class]="isActive('/')"><a routerLink="/">Home</a></li>
+        <li [class]="isActive('/projects')"><a routerLink="/projects">Projects</a></li>
+        <li [class]="isActive('/skills')"><a routerLink="/skills">Skills</a></li>
         <!-- <li><a routerLink="/resume">Resume</a></li> -->
-        <li><a routerLink="/contact">Contact</a></li>
+        <li [class]="isActive('/contact')"><a routerLink="/contact">Contact</a></li>
         <li><a href="assets/pdfs/Resume.pdf" download="Madhukar_Gurram_Resume.pdf" class="resume-button">Resume</a></li>
       </ul>
     </nav>
-    <!-- <a href="path_to_your_resume.pdf" download="YourResume.pdf" class="resume-button">Resume</a> -->
   </div>
   </header>
   
