--- a/src/pages/home/home.component.css
+++ b/src/pages/home/home.component.css
@@ -148,3 +148,22 @@
     font-size: 16px;
     line-height: 1.6;
 }
+.details{
+    margin-top: 20px;
+}
+.icons {
+    display: inline-flex;
+}
+.icons a {
+    margin-right: 10px;
+  }
+.linkedIn {
+    color: #0a66c2;
+}  
+.github{
+    color: white;
+}
+.npm{
+    color: #cb3837;
+    font-size: 2.45em;
+}
