--- a/src/pages/home/home.component.html
+++ b/src/pages/home/home.component.html
@@ -13,8 +13,8 @@
         Verification of AES algorithm of data encryption.</p>
     </div>
     <div class="profile">
-      <img src="assets/images/P2.jpg" alt="My Profile">
-      <!-- <img src="assets/images/Profile.jpeg" alt="My Profile"> -->
+      <!-- <img src="assets/images/P2.jpg" alt="My Profile"> -->
+      <img src="assets/images/Profile.jpeg" alt="My Profile">
       <div class="details">
         <!-- <h2>Madhukar Gurram</h2>
         <p>Software Developer</p> -->
