--- a/src/components/header/header.component.css
+++ b/src/components/header/header.component.css
@@ -98,3 +98,25 @@ nav ul li a:hover {
 .nav-section {
   margin-right: 10px;
 }
+
+@media screen and (max-width: 768px)  and (min-width: 320px){
+  .container {
+    flex-direction: row;
+  }
+  
+  .logo {
+    margin-right: auto;
+  }
+
+  nav ul {
+    display: flex;
+  }
+
+  nav ul li {
+    margin-right: 0;
+  }
+
+  .resume-button {
+    margin-left: 0;
+  }
+}
